# monolens

./: .gitignore  .pre-commit-config.yaml  README.md  demo.mov  pyproject.toml  setup.cfg
.github/workflows/: lint_python.yml  publish.yml
benchmarks/: test_colorblindness.py
monolens/: README.md  __init__.py  __main__.py  intro.py  lens.py  util.py  version.py  widget.py
monolense/: __init__.py  main.py  util.py
src/monolens/: README.md  __init__.py  _version.py  intro.py  lens.py  util.py
tests/: test_util.py  test_version.py
