[metadata]
name = monolens
version = attr: monolens.__version__
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = Show part of your screen in 8-bit grayscale
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hdembinski/monolens
project_urls =
    Bug Tracker = https://github.com/hdembinski/monolens/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
  =src
packages = monolens
python_requires = >=3.6
install_requires = pyside6; numpy; numba

[options.entry_points]
console_scripts =
    monolens = monolens:main

[flake8]
max-line-length = 90
