[metadata]
name = monolens
version = attr: monolens._version.version
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = View part of your screen in monochrome colors or in simulated protanopia, deuteranopia, or tritanopia
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hdembinski/monolens
project_urls =
    Bug Tracker = https://github.com/hdembinski/monolens/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = monolens
python_requires = >=3.6
install_requires =
    pyside6
    numpy
    numba

[options.entry_points]
console_scripts =
    monolens = monolens:main

[flake8]
max-line-length = 90
